--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
           <button type="submit">登録</button>
         </div>
       </form>
+      <button id="button" data-type="edit">
+        ボタン
+      </button>
       <!-- Todo入力フォーム End -->
     </div>
     <script src="js/script.js"></script>
