文字列の処理

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             type="text"
             id="input-text"
             name="todo-text"
-            placeholder="牛乳を買う"
+            placeholder="コメント"
           />
         </div>
         <div class="submit">
